Allow filtering for active deck
